--- a/Event_/Event_Detail_Header.xib
+++ b/Event_/Event_Detail_Header.xib
@@ -49,10 +49,9 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" tag="4" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zZA-Hb-m5H">
-                    <rect key="frame" x="8" y="252" width="43" height="25"/>
+                    <rect key="frame" x="8" y="252" width="432" height="25"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="25" id="9wB-dy-ta8"/>
-                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="43" id="D6U-fI-tDU"/>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="25" id="Lji-0o-uv5"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -71,23 +70,24 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="zZA-Hb-m5H" firstAttribute="leading" secondItem="EPP-VA-1IV" secondAttribute="leading" constant="8" id="1hM-VC-3Bw"/>
                 <constraint firstItem="qUM-Rg-ohd" firstAttribute="leading" secondItem="MKc-CM-pAW" secondAttribute="leading" constant="8" id="2TP-1c-bSP"/>
+                <constraint firstItem="zZA-Hb-m5H" firstAttribute="leading" secondItem="EPP-VA-1IV" secondAttribute="leading" constant="8" id="3YO-yM-LRN"/>
                 <constraint firstItem="Ni2-Gl-pe1" firstAttribute="leading" secondItem="EPP-VA-1IV" secondAttribute="leading" id="6eD-xQ-Nbz"/>
                 <constraint firstItem="ou6-mg-uyH" firstAttribute="leading" secondItem="EPP-VA-1IV" secondAttribute="leading" id="7dB-h5-hFI"/>
                 <constraint firstItem="EPP-VA-1IV" firstAttribute="trailing" secondItem="8nP-0A-IsZ" secondAttribute="trailing" constant="12" id="7m2-lQ-2jk"/>
+                <constraint firstItem="EPP-VA-1IV" firstAttribute="trailing" secondItem="zZA-Hb-m5H" secondAttribute="trailing" constant="8" id="8fG-T5-MQy"/>
                 <constraint firstAttribute="bottom" secondItem="qUM-Rg-ohd" secondAttribute="bottom" constant="3" id="Fgx-iX-nTZ"/>
                 <constraint firstItem="Ni2-Gl-pe1" firstAttribute="top" secondItem="MKc-CM-pAW" secondAttribute="top" id="JDp-UH-H9C"/>
                 <constraint firstItem="Ni2-Gl-pe1" firstAttribute="trailing" secondItem="EPP-VA-1IV" secondAttribute="trailing" id="Ono-8n-aNY"/>
                 <constraint firstItem="FIb-ST-OUM" firstAttribute="centerY" secondItem="MKc-CM-pAW" secondAttribute="centerY" id="TJ0-yL-8s6"/>
                 <constraint firstItem="8nP-0A-IsZ" firstAttribute="centerY" secondItem="MKc-CM-pAW" secondAttribute="centerY" id="Urr-zk-EVN"/>
-                <constraint firstItem="qUM-Rg-ohd" firstAttribute="top" secondItem="zZA-Hb-m5H" secondAttribute="bottom" constant="1" id="Xyv-fL-k9i"/>
                 <constraint firstItem="KTq-BA-e4p" firstAttribute="leading" secondItem="qUM-Rg-ohd" secondAttribute="trailing" constant="7.5" id="esH-Nh-pZl"/>
                 <constraint firstAttribute="bottom" secondItem="ou6-mg-uyH" secondAttribute="bottom" id="k1y-6M-oVM"/>
                 <constraint firstItem="8nP-0A-IsZ" firstAttribute="leading" secondItem="FIb-ST-OUM" secondAttribute="trailing" constant="6" id="kBM-wI-rOx"/>
                 <constraint firstItem="FIb-ST-OUM" firstAttribute="leading" secondItem="EPP-VA-1IV" secondAttribute="leading" constant="8" id="kF3-eN-nAf"/>
                 <constraint firstItem="ou6-mg-uyH" firstAttribute="trailing" secondItem="EPP-VA-1IV" secondAttribute="trailing" id="ln3-5p-dZ2"/>
                 <constraint firstAttribute="bottom" secondItem="KTq-BA-e4p" secondAttribute="bottom" constant="3" id="qgX-EV-tbF"/>
+                <constraint firstItem="qUM-Rg-ohd" firstAttribute="top" secondItem="zZA-Hb-m5H" secondAttribute="bottom" constant="1" id="rqJ-xA-6xF"/>
                 <constraint firstAttribute="bottom" secondItem="Ni2-Gl-pe1" secondAttribute="bottom" id="t1L-2L-s84"/>
                 <constraint firstItem="ou6-mg-uyH" firstAttribute="top" secondItem="MKc-CM-pAW" secondAttribute="top" id="v6u-cn-2aI"/>
             </constraints>
@@ -134,10 +134,9 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" tag="4" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EMp-IW-WH0">
-                    <rect key="frame" x="8" y="117" width="43" height="25"/>
+                    <rect key="frame" x="8" y="117" width="304" height="25"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="25" id="1Hn-20-KO4"/>
-                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="43" id="wWq-6E-rNf"/>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="25" id="UPy-bG-8Y9"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -157,15 +156,16 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="vQ2-px-bXc" firstAttribute="leading" secondItem="hRq-x5-B8e" secondAttribute="leading" constant="8" id="23h-4U-Xai"/>
+                <constraint firstItem="r5q-B0-0lT" firstAttribute="top" secondItem="EMp-IW-WH0" secondAttribute="bottom" constant="1" id="7gc-zr-aLb"/>
                 <constraint firstItem="fug-nB-2Pb" firstAttribute="centerY" secondItem="feB-4V-Q7P" secondAttribute="centerY" id="7qS-E0-fhx"/>
+                <constraint firstItem="EMp-IW-WH0" firstAttribute="leading" secondItem="hRq-x5-B8e" secondAttribute="leading" constant="8" id="AEu-wS-jeS"/>
                 <constraint firstItem="u5v-uc-1NN" firstAttribute="top" secondItem="feB-4V-Q7P" secondAttribute="top" id="AwJ-go-9in"/>
                 <constraint firstItem="H0R-dz-j9w" firstAttribute="leading" secondItem="r5q-B0-0lT" secondAttribute="trailing" constant="7.5" id="CyA-AE-xWh"/>
                 <constraint firstItem="vQ2-px-bXc" firstAttribute="centerY" secondItem="feB-4V-Q7P" secondAttribute="centerY" id="D9X-MK-W5f"/>
                 <constraint firstItem="hRq-x5-B8e" firstAttribute="bottom" secondItem="r5q-B0-0lT" secondAttribute="bottom" constant="3" id="FI4-uG-8vb"/>
-                <constraint firstItem="EMp-IW-WH0" firstAttribute="leading" secondItem="hRq-x5-B8e" secondAttribute="leading" constant="8" id="GuG-lK-cZ7"/>
                 <constraint firstItem="hRq-x5-B8e" firstAttribute="bottom" secondItem="H0R-dz-j9w" secondAttribute="bottom" constant="3" id="H9M-db-cf5"/>
+                <constraint firstItem="hRq-x5-B8e" firstAttribute="trailing" secondItem="EMp-IW-WH0" secondAttribute="trailing" constant="8" id="Kws-Wg-dnj"/>
                 <constraint firstItem="r5q-B0-0lT" firstAttribute="leading" secondItem="hRq-x5-B8e" secondAttribute="leading" constant="8" id="Mh3-vL-3dJ"/>
-                <constraint firstItem="r5q-B0-0lT" firstAttribute="top" secondItem="EMp-IW-WH0" secondAttribute="bottom" constant="1" id="PAR-XO-Lo8"/>
                 <constraint firstItem="u5v-uc-1NN" firstAttribute="leading" secondItem="hRq-x5-B8e" secondAttribute="leading" id="QMy-Lj-FWT"/>
                 <constraint firstItem="8dq-fa-adr" firstAttribute="trailing" secondItem="hRq-x5-B8e" secondAttribute="trailing" id="WHG-WI-onv"/>
                 <constraint firstItem="u5v-uc-1NN" firstAttribute="trailing" secondItem="hRq-x5-B8e" secondAttribute="trailing" id="bvo-KO-Fcy"/>
